# cmdx

./: .gitignore  CMDX-PRD.md  Cargo.toml  LICENSE  README.md  TASKS.md  install.sh
scripts/: install.sh
src/: cli.rs  command.rs  config.rs  error.rs  main.rs  store.rs
src/commands/: add.rs  copy.rs  edit.rs  export.rs  find.rs  import.rs  init.rs  list.rs  mod.rs  mv.rs  pick.rs  remove.rs  run.rs  show.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
